@@ -34,6 +34,8 @@
                     skipped if configfile was specified in cmdline
                   - added optional argument for -D, -S and -d
                   - added manpage  
+                  - added configure --disable-extendedstats to compile w/o
+                    avg, sum and max
   12-20-2004 0.4: pre1:
                   - get_iface_stats cleanup
                   - plain and csv output added
